--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "twilio": "^5.7.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
